--- a/Miembros.html
+++ b/Miembros.html
@@ -7,6 +7,7 @@
 <html>
 
       <head>
+       <meta charsed="utf-8">
             <title>Compra tu aprobado</title>
             <style>
               .titulo {
@@ -68,7 +69,7 @@
            <h1 class="titulo">Compra tu aprobado</h1>
            
            <div id= "navegador">
-            <a  href=Main.html class="barra">
+            <a  href=index.html class="barra">
             <img src= "imagenes/Circulito.png" style=" width: 150px; position: absolute; right: calc(50% + 150px); top: 30px; ">
             Principal 
             </a>
