--- a/Metodos.html
+++ b/Metodos.html
@@ -7,7 +7,7 @@
 <html>
 
       <head>
-       <meta charsed="utf-8">
+       <meta charset="utf-8">
             <title>Métodos</title>
             <style>
               .titulo {
