--- a/Miembros.html
+++ b/Miembros.html
@@ -7,7 +7,7 @@
 <html>
 
       <head>
-       <meta charsed="utf-8">
+       <meta charset="utf-8">
             <title>Compra tu aprobado</title>
             <style>
               .titulo {
