--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 
       <head>
+      <link rel= "shortcut icon" type= "image/png" href= "imagenes/penta.png">
       <meta charset="utf-8">
             <title>Compra tu aprobado</title>
             <style>
